freest/test/prog/Invalid/Scoping/MultipleTypeDecls/MultipleTypeDecls.fst
module MultipleTypeDecls where

type Foo : *T
type Foo = Int
type Foo = Char
